  rather than MS Sans Serif (affects .NET Framework builds).
* Debugger Visualizer Installations dialog:
  * Installing the classic debugger visualizer for Visual Studio 2022 or higher asks for confirmation because the
    extension-based visualizers from Visual Studio Marketplace are recommended.
+ Edit Resources window:
  + New 'Hide Dependent Resources' check box.

! API changes:

! KGySoft.Drawing.ImagingTools.ViewModel namespace:
---------------------------------------------------
! IViewModel<TModel> interface:
  ! New ChangesApplied event and TrySetModel method. Breaking change only if you implemented this interface,
    which is normally not needed.
! ViewModelFactory class:
  ! The return value of the FromPalette(ColorPalette, bool) method has been changed to IViewModel<ColorPalette> from
    IViewModel<Color[]>. The FromPalette(Color[], bool) overload still returns IViewModel<Color[]>.
  * The return type of the FromGraphics(GraphicsInfo) method has been changed to IViewModel<GraphicsInfo> from
    IViewModel. This is a compatible change because IVIewModel<TModel> is a more specific type than IViewModel.
  * The return type of the FromBitmapData(BitmapDataInfo) method has been changed to IViewModel<BitmapDataInfo> from
    IViewModel. This is a compatible change because IVIewModel<TModel> is a more specific type than IViewModel.
  * The return type of the FromCustomBitmap method has been changed to IViewModel<CustomBitmapInfo> from
    IViewModel. This is a compatible change because IVIewModel<TModel> is a more specific type than IViewModel.
  * The return type of the FromCustomColor method has been changed to IViewModel<CustomColorInfo> from
    IViewModel. This is a compatible change because IVIewModel<TModel> is a more specific type than IViewModel.
  * The return type of the FromCustomPalette method has been changed to IViewModel<CustomPaletteInfo> from