@@ -31,6 +31,8 @@
 * Debugger Visualizer Installations dialog:
   * Installing the classic debugger visualizer for Visual Studio 2022 or higher asks for confirmation because the
     extension-based visualizers from Visual Studio Marketplace are recommended.
+* Palette visualizer:
+  * View width is now does not have a maximum limit. The entries are scaled to fit the available width.
 + Edit Resources window:
   + New 'Hide Dependent Resources' check box.
 
